# mastic

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  dfx.json  skills-lock.json
.claude/skills/: canister-security  https-outcalls  internet-identity  multi-canister  sns-launch  stable-memory
.github/workflows/: ci.yml  (+3 more)
crates/canisters/directory/: Cargo.toml
crates/canisters/directory/src/: adapters.rs  api.rs  domain.rs  error.rs  inspect.rs  lib.rs  moderators.rs  repository.rs  schema.rs  settings.rs  test_utils.rs
crates/canisters/directory/src/adapters/: federation_canister.rs  management_canister.rs  user_canister.rs
crates/canisters/directory/src/adapters/federation_canister/: mock.rs
crates/canisters/directory/src/adapters/management_canister/: mock.rs
crates/canisters/directory/src/adapters/user_canister/: mock.rs
crates/canisters/directory/src/api/: inspect.rs
crates/canisters/directory/src/domain/: moderators.rs  tombstone.rs  users.rs
crates/canisters/directory/src/domain/moderators/: repository.rs
crates/canisters/directory/src/domain/tombstone/: repository.rs
crates/canisters/directory/src/domain/users/: delete_profile.rs  get_user.rs  repository.rs  search_profiles.rs  sign_up.rs  user_canister.rs  whoami.rs
crates/canisters/directory/src/domain/users/delete_profile/: state.rs
crates/canisters/directory/src/domain/users/sign_up/: state.rs
crates/canisters/directory/src/repository/: moderators.rs  tombstone.rs
crates/canisters/directory/src/schema/: report_state.rs  user_canister_status.rs
crates/canisters/federation/: Cargo.toml
crates/canisters/federation/src/: adapters.rs  api.rs  conversions.rs  directory.rs  domain.rs  inspect.rs  lib.rs  memory.rs  settings.rs  test_utils.rs
crates/canisters/federation/src/adapters/: user.rs
crates/canisters/federation/src/adapters/user/: mock.rs
crates/canisters/federation/src/api/: inspect.rs
crates/canisters/federation/src/domain/: activity.rs  fetch_status.rs
crates/canisters/federation/src/domain/activity/: send_activity.rs
crates/canisters/federation/src/memory/: principal.rs  user_data.rs
crates/canisters/user/: Cargo.toml
crates/canisters/user/src/: adapters.rs  api.rs  domain.rs  error.rs  inspect.rs  lib.rs  repository.rs  schema.rs  settings.rs  test_utils.rs
crates/canisters/user/src/adapters/: directory.rs  federation.rs  schnorr.rs
crates/canisters/user/src/adapters/directory/: mock.rs
crates/canisters/user/src/adapters/federation/: mock.rs
crates/canisters/user/src/adapters/schnorr/: mock.rs
crates/canisters/user/src/api/: inspect.rs
crates/canisters/user/src/domain/: activity.rs  block.rs  boost.rs  ed25519.rs  feed.rs  follow_request.rs  follower.rs  following.rs  liked.rs  profile.rs  snowflake.rs  status.rs  urls.rs
crates/canisters/user/src/domain/activity/: handle_incoming.rs
crates/canisters/user/src/domain/activity/handle_incoming/: announce.rs  create.rs  delete.rs  follow.rs  like.rs  test_helpers.rs  undo.rs
crates/canisters/user/src/domain/block/: repository.rs
crates/canisters/user/src/domain/boost/: boost_status.rs  repository.rs  undo_boost.rs
crates/canisters/user/src/domain/feed/: read_feed.rs  repository.rs
crates/canisters/user/src/domain/follow_request/: get_follow_requests.rs  repository.rs
crates/canisters/user/src/domain/follower/: accept_follow.rs  get_followers.rs  reject_follow.rs  repository.rs
crates/canisters/user/src/domain/following/: follow_user.rs  get_following.rs  repository.rs  unfollow_user.rs
crates/canisters/user/src/domain/liked/: get_liked.rs  like.rs  repository.rs  unlike.rs
crates/canisters/user/src/domain/profile/: create_profile.rs  emit_delete.rs  get_profile.rs  repository.rs  update_profile.rs
crates/canisters/user/src/domain/status/: delete_status.rs  get_local_status.rs  get_statuses.rs  publish.rs  repository.rs
crates/canisters/user/src/repository/: activity.rs  block.rs  follow_request.rs  liked.rs  profile.rs  status.rs
crates/canisters/user/src/schema/: activity.rs  feed_source.rs  follow_status.rs  status.rs  visibility.rs
crates/libs/activitypub/: Cargo.toml
crates/libs/activitypub/src/: activity.rs  actor.rs  collection.rs  context.rs  lib.rs  link.rs  mastodon.rs  object.rs  tag.rs  webfinger.rs
crates/libs/db-utils/: Cargo.toml
crates/libs/db-utils/src/: bounded_text.rs  field_update.rs  handle.rs  hashtag.rs  lib.rs  media.rs  migration.rs  repository.rs  settings.rs  transaction.rs  url.rs
crates/libs/db-utils/src/settings/: setting_value.rs
crates/libs/did/: Cargo.toml
crates/libs/did/src/: common.rs  directory.rs  federation.rs  lib.rs  user.rs
crates/libs/did/src/common/: tests.rs
crates/libs/did/src/directory/: tests.rs
crates/libs/did/src/federation/: tests.rs
crates/libs/did/src/user/: tests.rs
docs/: README.md  _config.yml  book.toml  index.md  project.md
integration-tests/: Cargo.toml
integration-tests/pocket-ic-tests/: Cargo.toml
integration-tests/pocket-ic-tests-macro/: Cargo.toml
integration-tests/pocket-ic-tests/src/: agent.rs  lib.rs  pocket_ic.rs  wasm.rs
integration-tests/pocket-ic-tests/tests/: integration_tests.rs
integration-tests/src/: actor.rs  directory_client.rs  helpers.rs  lib.rs  pocket_ic.rs  user_client.rs  wasm.rs
integration-tests/src/pocket_ic/: cycles.rs  env.rs
integration-tests/src/pocket_ic/cycles/: cmc.rs  icp_index.rs  icp_ledger.rs
integration-tests/tests/: boost_status.rs  delete_profile.rs  delete_status.rs  follow.rs  get_profile.rs  get_statuses.rs  integration_tests.rs  like.rs  publish_status.rs  read_feed.rs  retry_sign_up.rs  search_profiles.rs  sign_up.rs  unfollow.rs  update_profile.rs
integration-tests/tests/pocket_ic/: hello_world.rs  mastic.rs  mod.rs
just/: build.just  code_check.just  dependencies.just  deploy.just  orbit.just  test.just
src/did/: Cargo.toml  build.rs
src/did/src/: lib.rs  orbit_station.rs
src/hello_world/: Cargo.toml
src/hello_world/src/: lib.rs
src/pocket-test/: Cargo.toml
src/pocket-test/src/: lib.rs
src/user/: Cargo.toml
(+63 files in other folders)
