[workspace]
members = [
  "crates/canisters/directory",
  "crates/canisters/federation",
  "crates/canisters/user",
  "crates/libs/activitypub",
  "crates/libs/db-utils",
  "crates/libs/did",
  "crates/libs/ic-utils",
  "integration-tests",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
license = "MIT"
repository = "https://github.com/veeso/mastic"
rust-version = "1.91.1"

[workspace.dependencies]
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.3"
git2 = "0.20"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
ic-dbms-canister = "0.7"
ic-stable-structures = "0.7"
log = "0.4"
pocket-ic-harness = "0.2"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
wasm-dbms = "0.7"
wasm-dbms-api = "0.7"
wasm-dbms-memory = "0.7"
