[package]
name = "integration-tests"
version = { workspace = true }
edition = { workspace = true }
description = "integration tests for mastic"
license = { workspace = true }
repository = { workspace = true }
publish = false
rust-version = { workspace = true }

[dependencies]
candid = { workspace = true }
did = { workspace = true }
pocket-ic-harness = { workspace = true }
tokio = { workspace = true }
