[package]
name = "pocket-ic-tests-macro"
version = { workspace = true }
edition = { workspace = true }
description = "pocket-test macro for testing with the pocket ic context"
license = { workspace = true }
repository = { workspace = true }
publish = false
rust-version = { workspace = true }

[dependencies]
quote = { workspace = true }
syn = { workspace = true }

[lib]
name = "pocket_ic_tests_macro"
path = "src/lib.rs"
proc-macro = true
