[package]
name = "pocket-ic-tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "integration tests for ic-dbms-canister"
publish = false

[dependencies]
anyhow = "1"
candid = { workspace = true }
flate2 = "1"
ic-agent = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { version = "0.13" }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
pocket-ic-tests-macro = { path = "../pocket-ic-tests-macro" }
