[package]
name = "pocket-ic-tests"
version = { workspace = true }
edition = { workspace = true }
description = "integration tests for ic-dbms-canister"
license = { workspace = true }
repository = { workspace = true }
publish = false
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
flate2 = { workspace = true }
ic-agent = { workspace = true }
pocket-ic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pocket-ic-tests-macro = { path = "../pocket-ic-tests-macro" }
