[package]
name = "did"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "did"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
