[package]
name = "pocket-test"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "pocket-test macro for testing with the pocket ic context"
include = ["src/**/*"]
readme = "../../README.md"

[lib]
name = "pocket_test"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
