[package]
name = "directory"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Mastic aims to bring the Fediverse natively onto the Internet Computer ecosystem."
publish = false

[dependencies]
candid = { workspace = true }
db-utils = { workspace = true }
did = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-dbms-canister = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wasm-dbms = { workspace = true }
wasm-dbms-api = { workspace = true }
wasm-dbms-memory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
