[package]
name = "federation"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Mastic aims to bring the Fediverse natively onto the Internet Computer ecosystem."
publish = false

[dependencies]
activitypub = { path = "../../libs/activitypub" }
candid = { workspace = true }
did = { path = "../../libs/did" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
