[package]
name = "federation"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Mastic aims to bring the Fediverse natively onto the Internet Computer ecosystem."
publish = false

[dependencies]
activitypub = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
