[package]
name = "activitypub"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "An implementation of the ActivityPub protocol for the Internet Computer."

[lib]
name = "activitypub"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
