[package]
name = "activitypub"
version = { workspace = true }
edition = { workspace = true }
description = "An implementation of the ActivityPub protocol for the Internet Computer."
license = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lib]
name = "activitypub"
path = "src/lib.rs"
