[package]
name = "db-utils"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
did = { workspace = true }
ic-cdk = { workspace = true }
ic-dbms-canister = { workspace = true }
ic-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wasm-dbms = { workspace = true }
wasm-dbms-api = { workspace = true }
wasm-dbms-memory = { workspace = true }

[lib]
name = "db_utils"
path = "src/lib.rs"
