[package]
name = "did"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[lib]
name = "did"
path = "src/lib.rs"
